Recibiendo y mostrando los eventos de cada equipo satisfactoriamente

--- a/app/src/main/res/layout/team_details.xml
+++ b/app/src/main/res/layout/team_details.xml
@@ -2,6 +2,16 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+                name="team"
+                type="com.sealor.spanishlaliga.model.Team" />
+
+        <variable name="event"
+                  type="com.sealor.spanishlaliga.model.Event"/>
+    </data>
+
     <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
