--- a/app/src/main/res/layout/team_details.xml
+++ b/app/src/main/res/layout/team_details.xml
@@ -54,6 +54,7 @@
                     android:id="@+id/detail_badge"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
+                    android:scaleType="fitXY"
                     android:contentDescription="@string/badge_description"
                     app:srcCompat="@mipmap/ic_launcher"/>
 
@@ -68,6 +69,7 @@
                     android:id="@+id/detail_jersey"
                     android:layout_width="300dp"
                     android:layout_height="300dp"
+                    android:scaleType="fitXY"
                     android:contentDescription="@string/jersey_description"
                     app:srcCompat="@mipmap/ic_launcher"/>
 
